@@ -1,6 +1,7 @@
 <?php
 /* $Id$ */
 include_once 'includes/init.php';
+require_valide_referring_url ();
 include_once 'includes/date_formats.php';
 if ( file_exists ( 'install/default_config.php' ) )
   include_once 'install/default_config.php';
