@@ -15,6 +15,7 @@
  *********************************************************************/
 include_once 'includes/init.php';
 include_once 'includes/xcal.php';
+require_valide_referring_url ();
 
 $user = getPostValue ( 'user' );
 if ( empty ( $user ) || $user == $login )
