@@ -16,6 +16,7 @@
  */
 
 include_once 'includes/init.php';
+require_valide_referring_url ();
 send_no_cache_header ();
 
 if ( empty ( $user ) )
